Collection of changes since pyFormex release 0.4
================================================
- config.py:
  Configuration files now can have continuation lines, flagged by \

- image saving:
   - option settings gathered in a single dialog
   - auto mode saves a new image at each draw() operation
   - option to save full pyFormex window

- when starting multiple pyFormex instances, windows are named differently 

- user menus (see stl.py example)


