@@ -1,5 +1,5 @@
 #!/usr/bin/env pyformex
-# $Id$
+# $Id: Sphere2.py 154 2006-11-03 19:08:25Z bverheg $
 #
 """Sphere2"""
 
@@ -11,8 +11,8 @@ m = 1.6
 ns = 6
 smooth()
 for i in range(ns):
-    b = Sphere2(nx,ny,bot=-90,top=90).translate1(0,-1.0)
-    s = Sphere3(nx,ny,bot=-90,top=90).translate1(0,1.0)
+    b = Sphere2(nx,ny,bot=-90,top=90).translate(0,-1.0)
+    s = Sphere3(nx,ny,bot=-90,top=90).translate(0,1.0)
     s.setProp(3)
     clear()
     bb = bbox([b,s])
