@@ -20,10 +20,10 @@ def drawit(F,view='front'):
 F = Formex(pattern("164"),[1,2,3]); drawit(F)
 F = F.replic(m,1,0); drawit(F)
 F = F.replic(n,1,1); drawit(F)
-F = F.translate1(2,1); drawit(F,'iso')
+F = F.translate(2,1); drawit(F,'iso')
 F = F.cylindrical([2,1,0],[1.,360./n,1.]); drawit(F,'iso')
 F = F.replic(5,m,2); drawit(F,'iso')
 F = F.rotate(-10,0); drawit(F,'iso')
-F = F.translate1(0,5); drawit(F,'iso')
+F = F.translate(0,5); drawit(F,'iso')
 F = F.cylindrical([0,2,1],[1.,360./m,1.]); drawit(F,'iso')
 drawit(F,'right')
