@@ -72,6 +72,8 @@ In order to run pyFormex, you need to have the following installed (and working)
 Nearly all Linux distributions come with Python installed, so this should not be no major obstacle.
 \item \htmladdnormallinkfoot{NumPy}{\numpyURL}: Version 1.0-rc1 or higher. Earlier versions can be made to work, but will require some changes to be made. NumPy is the package we use for fast numerical array operations in Python and is essential for \pyformex.\footnote{We do no longer support the \texttt{Numarray} package, which was used up until pyFormex 0.3.}
 On Linux systems, installing NumPy from source is usually straightforward. Debian users should install the packages python-numpy, python-numpy-dev and python-numpy-ext. There are binary packages for Windows on the \htmladdnormallinkfoot{Sourceforge download page}{http://www.numpy.org/}.
+\item PyOpenGL
+\item PyQt
 \end{itemize}
 
 
