@@ -14,3 +14,7 @@ Collection of changes since pyFormex release 0.4
 
 
 
+- Formex class:
+  - setProp has no longer a default value. If called with a value None,
+    the property numbers are removed.
+  - removeProp is deprecated: replace with setProp(None)
